# kelp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  alpha_release_assets.md  build.rs  implementation_plan.md  manual_testing_checklist.md  resources.rc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  crash_report.md  feature_request.md  performance_issue.md  question.md  ui_issue.md
.github/workflows/: release.yml
.jules/: bolt.md  palette.md
installer/: kelp.iss
src/: config.rs  indexer.rs  learning.rs  lib.rs  logger.rs  main.rs  memory_index.rs  models.rs  models.rs.orig  providers.rs  query_parser.rs  query_parser.rs.orig  ranking_engine.rs  result_cache.rs  search.rs  search.rs.orig  search_engine.rs  settings.rs  storage.rs  ui.html  ui_bridge.rs  update.rs  utilities.rs  watcher.rs
ui1/: DESIGN.md  code.html
